# henry_mflab

./: .gitignore  README.md  animate_henry.py  animate_simple_henry.py  generate_coupling_scenarios.sh  generate_one_coupling_scenario.sh  generate_simple_henry.sh  pyproject.toml  requirements.txt  run_henry.py  run_simple_henry.py  test_boundaries.ipynb  test_data.ipynb
henry_data/: __init__.py  cli.py  generators.py  reorganize.py  simulation.py  utils.py
notebooks/: test_data.ipynb  test_scenarios.ipynb
simple_henry/: __init__.py  cli.py  generators.py  simulation.py
