[project]
name = "henry-mflab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flopy==3.9.3",
    "numpy==1.26.3",
    "matplotlib==3.9.2",
    "h5py==3.14.0",
    "zarr==2.18.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
